--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,10 @@
         <log4j2.version>2.17.2</log4j2.version>
         <slf4j.version>1.7.5</slf4j.version>
         <dozer.version>5.5.1</dozer.version>
-        <dutil.version>beta-0.2.2.a</dutil.version>
+        <dutil.version>beta-0.3.0.a</dutil.version>
         <kafka.version>2.4.0</kafka.version>
         <snowflake.version>1.4.6.a</snowflake.version>
-        <subgrade.version>1.2.7.a</subgrade.version>
+        <subgrade.version>1.2.8.a-SNAPSHOT</subgrade.version>
         <spring-terminator.version>1.0.8.a</spring-terminator.version>
         <spring-telqos.version>1.1.3.a</spring-telqos.version>
         <dcti.version>1.1.2.a</dcti.version>
