--- a/fdr-node/fdr-node-all/src/main/resources/database/performance.properties
+++ b/fdr-node/fdr-node-all/src/main/resources/database/performance.properties
@@ -11,3 +11,7 @@ hibernate.jdbc.fetch_size=50
 #
 # \u6B22\u8FCE\u5927\u5BB6\u6301\u7EED\u8D21\u732E\u5176\u5B83\u79CD\u7C7B\u7684\u6570\u636E\u5E93\u652F\u6301\u3002
 hibernate.accelerate_enabled=true
+# \u8FDE\u63A5\u6C60\u6700\u5927\u6D3B\u52A8\u8FDE\u63A5\u6570\u91CF
+data-source.max-active=20
+# \u8FDE\u63A5\u6C60\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5\u6570\u91CF
+data-source.min-idle=0
