--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.10.1.a</version>
+        <version>1.10.2.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-impl</artifactId>
