--- a/fdr-node/fdr-node-inspect/pom.xml
+++ b/fdr-node/fdr-node-inspect/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>fdr-node</artifactId>
         <groupId>com.dwarfeng</groupId>
-        <version>1.10.1.a</version>
+        <version>1.10.2.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-node-inspect</artifactId>
