--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
         <log4j2.version>2.17.2</log4j2.version>
         <slf4j.version>1.7.5</slf4j.version>
         <dozer.version>5.5.1</dozer.version>
-        <dutil.version>beta-0.3.0.a</dutil.version>
+        <dutil.version>beta-0.3.1.a</dutil.version>
         <kafka.version>2.4.0</kafka.version>
-        <snowflake.version>1.4.6.a</snowflake.version>
-        <subgrade.version>1.2.8.a-SNAPSHOT</subgrade.version>
-        <spring-terminator.version>1.0.8.a</spring-terminator.version>
-        <spring-telqos.version>1.1.3.a</spring-telqos.version>
-        <dcti.version>1.1.2.a</dcti.version>
+        <snowflake.version>1.4.8.a</snowflake.version>
+        <subgrade.version>1.2.9.a</subgrade.version>
+        <spring-terminator.version>1.0.9.a</spring-terminator.version>
+        <spring-telqos.version>1.1.4.a</spring-telqos.version>
+        <dcti.version>1.1.3.a</dcti.version>
         <groovy.version>3.0.7</groovy.version>
         <!-- Maven插件版本声明 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
