--- a/fdr-node/fdr-node-record/pom.xml
+++ b/fdr-node/fdr-node-record/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>fdr-node</artifactId>
         <groupId>com.dwarfeng</groupId>
-        <version>1.10.2.a</version>
+        <version>1.10.3.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-node-record</artifactId>
