--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.10.3.a</version>
+        <version>1.10.4.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-impl</artifactId>
