--- a/fdr-node/pom.xml
+++ b/fdr-node/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.10.3.a</version>
+        <version>1.10.4.a-SNAPSHOT</version>
     </parent>
 
     <packaging>pom</packaging>
