--- a/fdr-sdk/pom.xml
+++ b/fdr-sdk/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <!-- 日志处理 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
         <!-- subgrade组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
