--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -104,12 +104,12 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
         </dependency>
-        <!-- MySql连接器 -->
+        <!-- MySql 连接器 -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
-        <!-- Dozer模块 -->
+        <!-- Dozer 模块 -->
         <dependency>
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
@@ -133,7 +133,7 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
         </dependency>
-        <!-- Netty网络连接包 -->
+        <!-- Netty 网络连接包 -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
@@ -153,7 +153,7 @@
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
         </dependency>
-        <!-- dutil 模块 -->
+        <!-- Dutil 模块 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>dutil-basic</artifactId>
@@ -172,12 +172,12 @@
             <groupId>com.dwarfeng</groupId>
             <artifactId>snowflake-distributed-service-api</artifactId>
         </dependency>
-        <!-- subgrade 组件 -->
+        <!-- Subgrade 组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>subgrade-impl</artifactId>
         </dependency>
-        <!-- dcti 标准接口 -->
+        <!-- Dcti 标准接口 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>dcti</artifactId>
@@ -191,18 +191,18 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
-        <!-- groovy 支持 -->
+        <!-- Groovy 支持 -->
         <dependency>
             <groupId>org.apache.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <type>pom</type>
         </dependency>
-        <!-- spring-terminator组件 -->
+        <!-- Spring-terminator组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>spring-terminator</artifactId>
         </dependency>
-        <!-- spring-telqos组件 -->
+        <!-- Spring-telqos 组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>spring-telqos-core</artifactId>
