--- a/fdr-node/fdr-node-inspect/pom.xml
+++ b/fdr-node/fdr-node-inspect/pom.xml
@@ -25,7 +25,7 @@
     </properties>
 
     <dependencies>
-        <!-- spring-telqos组件 -->
+        <!-- Spring-telqos 组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>spring-telqos-api</artifactId>
