--- a/fdr-stack/pom.xml
+++ b/fdr-stack/pom.xml
@@ -22,12 +22,12 @@
     </properties>
 
     <dependencies>
-        <!-- subgrade组件 -->
+        <!-- Subgrade 组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>subgrade-stack</artifactId>
         </dependency>
-        <!-- dcti标准接口 -->
+        <!-- Dcti 标准接口 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>dcti</artifactId>
