--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <!-- 只定义依赖的版本，并不实际依赖 -->
     <dependencyManagement>
         <dependencies>
-            <!-- javassist 组件 -->
+            <!-- Javassist 组件 -->
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
@@ -116,7 +116,7 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- Netty网络连接包 -->
+            <!-- Netty 网络连接包 -->
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
