--- a/fdr-sdk/pom.xml
+++ b/fdr-sdk/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.10.4.a</version>
+        <version>1.10.5.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-sdk</artifactId>
