--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -167,6 +167,10 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+        </dependency>
         <!-- SnowFlake 服务 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
