--- a/fdr-stack/pom.xml
+++ b/fdr-stack/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.10.15.a</version>
+        <version>1.11.0.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-stack</artifactId>
