--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.dwarfeng</groupId>
     <artifactId>fdr</artifactId>
-    <version>1.10.15.a</version>
+    <version>1.11.0.a-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -516,37 +516,37 @@
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-stack</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-sdk</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-impl</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-node-maintain</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-node-record</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-node-inspect</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>fdr-node-all</artifactId>
-                <version>1.10.15.a</version>
+                <version>1.11.0.a-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
