Dubbo 微服务增加分组配置
Signed-off-by: DwArFeng <915724865@qq.com>

--- a/fdr-impl/src/test/resources/dubbo/connection.properties
+++ b/fdr-impl/src/test/resources/dubbo/connection.properties
@@ -2,3 +2,5 @@ dubbo.registry.zookeeper.address=zookeeper://your-host-here:2181
 dubbo.registry.zookeeper.timeout=3000
 dubbo.protocol.dubbo.port=20000
 dubbo.protocol.dubbo.host=your-host-here
+dubbo.provider.group=
+dubbo.consumer.snowflake.group=
