--- a/fdr-node/fdr-node-maintain/src/main/resources/dubbo/connection.properties
+++ b/fdr-node/fdr-node-maintain/src/main/resources/dubbo/connection.properties
@@ -2,3 +2,5 @@ dubbo.registry.zookeeper.address=zookeeper://your-host-here:2181
 dubbo.registry.zookeeper.timeout=3000
 dubbo.protocol.dubbo.port=20000
 dubbo.protocol.dubbo.host=your-host-here
+dubbo.provider.group=
+dubbo.consumer.snowflake.group=
