--- a/fdr-node/fdr-node-record/src/main/resources/fdr/push.properties
+++ b/fdr-node/fdr-node-record/src/main/resources/fdr/push.properties
@@ -33,6 +33,10 @@ pusher.partial_drain.drain_persistence_value=true
 pusher.partial_drain.drain_filtered_value=true
 # \u662F\u5426\u4E22\u5F03\u6389\u89E6\u53D1\u6570\u636E\u63A8\u9001\u3002
 pusher.partial_drain.drain_triggered_value=true
+# \u662F\u5426\u4E22\u5F03\u6389\u8BB0\u5F55\u529F\u80FD\u91CD\u7F6E\u63A8\u9001\u3002
+pusher.partial_drain.drain_record_reset=true
+# \u662F\u5426\u4E22\u5F03\u6389\u6620\u5C04\u529F\u80FD\u91CD\u7F6E\u63A8\u9001\u3002
+pusher.partial_drain.drain_map_reset=true
 #
 ###################################################
 #                      multi                      #
@@ -64,6 +68,10 @@ pusher.native.kafka.topic.data_triggered=fdr.pusher.data_triggered
 pusher.native.kafka.topic.realtime_updated=fdr.pusher.realtime_updated
 # \u6301\u4E45\u6570\u636E\u8BB0\u5F55\u65F6\u5411Kafka\u53D1\u9001\u7684\u4E3B\u9898\u3002
 pusher.native.kafka.topic.persistence_recorded=fdr.pusher.persistence_recorded
+# \u8BB0\u5F55\u529F\u80FD\u91CD\u7F6E\u65F6\u5411Kafka\u53D1\u9001\u7684\u4E3B\u9898\u3002
+pusher.native.kafka.topic.record_reset=fdr.pusher.record_reset
+# \u6620\u5C04\u529F\u80FD\u91CD\u7F6E\u65F6\u5411Kafka\u53D1\u9001\u7684\u4E3B\u9898\u3002
+pusher.native.kafka.topic.map_reset=fdr.pusher.map_reset
 #
 ###################################################
 #                    dcti.kafka                   #
