桥接器开发
实现桥接器
  com.dwarfeng.fdr.impl.handler.redis.hibernate.RedisBridge

优化桥接器
  com.dwarfeng.fdr.impl.handler.bridge.hibernate.HibernateBridge

Signed-off-by: DwArFeng <915724865@qq.com>

--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -181,6 +181,11 @@
             <groupId>com.dwarfeng</groupId>
             <artifactId>dcti</artifactId>
         </dependency>
+        <!-- Dwarfeng-dct 组件 -->
+        <dependency>
+            <groupId>com.dwarfeng</groupId>
+            <artifactId>dwarfeng-dct</artifactId>
+        </dependency>
         <!-- Jackson 组件 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
