--- a/fdr-impl/src/test/resources/fdr/bridge.properties
+++ b/fdr-impl/src/test/resources/fdr/bridge.properties
@@ -107,3 +107,42 @@ bridge.hibernate.data_source.min_idle=0
 #
 # \u6B22\u8FCE\u5927\u5BB6\u6301\u7EED\u8D21\u732E\u5176\u5B83\u79CD\u7C7B\u7684\u6570\u636E\u5E93\u652F\u6301\u3002
 bridge.hibernate.hibernate.accelerate_enabled=true
+###################################################
+#                      redis                      #
+###################################################
+# \u662F\u5426\u4F7F\u7528\u9879\u76EE\u672C\u8EAB\u7684 redis \u914D\u7F6E\u3002
+bridge.redis.use_project_config=true
+#
+# \u5982\u679C bridge.redis.use_project_config \u4E3A false\uFF0C\u5219\u9700\u8981\u6307\u5B9A\u4EE5\u4E0B\u7684\u914D\u7F6E\u3002
+# ------------------------------
+# Redis \u7684\u4E3B\u673A\u540D\u3002
+bridge.redis.host_name=your-host-here
+# Redis \u7684\u7AEF\u53E3\u53F7\u3002
+bridge.redis.port=6379
+# Redis \u7684\u5BC6\u7801\uFF08\u5982\u679C\u6CA1\u6709\u5BC6\u7801\u5219\u7559\u7A7A\uFF09\u3002
+bridge.redis.password=your-password-here
+# Redis \u5BA2\u6237\u7AEF\u8D85\u65F6\u65F6\u95F4\u5355\u4F4D\u662F\u6BEB\u79D2\u3002
+bridge.redis.timeout=10000
+# \u6700\u5927\u7A7A\u95F2\u6570\u3002
+bridge.redis.max_idle=300
+# \u63A7\u5236\u4E00\u4E2A pool\u53EF\u5206\u914D\u591A\u5C11\u4E2A jedis \u5B9E\u4F8B, \u8BBE\u4E3A0\u8868\u793A\u65E0\u9650\u5236\u3002
+bridge.redis.max_total=1000
+# \u6700\u5927\u5EFA\u7ACB\u8FDE\u63A5\u7B49\u5F85\u65F6\u95F4\u3002\u5982\u679C\u8D85\u8FC7\u6B64\u65F6\u95F4\u5C06\u63A5\u5230\u5F02\u5E38\u3002\u8BBE\u4E3A -1 \u8868\u793A\u65E0\u9650\u5236\u3002
+bridge.redis.max_wait_millis=-1
+# \u8FDE\u63A5\u7684\u6700\u5C0F\u7A7A\u95F2\u65F6\u95F4\u3002
+bridge.redis.min_evictable_idle_time_millis=300000
+# \u6BCF\u6B21\u91CA\u653E\u8FDE\u63A5\u7684\u6700\u5927\u6570\u76EE\u3002
+bridge.redis.num_tests_per_eviction_run=1024
+# \u9010\u51FA\u626B\u63CF\u7684\u65F6\u95F4\u95F4\u9694(\u6BEB\u79D2) \u5982\u679C\u4E3A\u8D1F\u6570\uFF0C\u5219\u4E0D\u8FD0\u884C\u9010\u51FA\u7EBF\u7A0B\u3002
+bridge.redis.time_between_eviction_runs_millis=30000
+# \u662F\u5426\u5728\u4ECE\u6C60\u4E2D\u53D6\u51FA\u8FDE\u63A5\u524D\u8FDB\u884C\u68C0\u9A8C\uFF0C\u5982\u679C\u68C0\u9A8C\u5931\u8D25\uFF0C\u5219\u4ECE\u6C60\u4E2D\u53BB\u9664\u8FDE\u63A5\u5E76\u5C1D\u8BD5\u53D6\u51FA\u53E6\u4E00\u4E2A\u3002
+bridge.redis.test_on_borrow=true
+# \u5728\u7A7A\u95F2\u65F6\u68C0\u67E5\u6709\u6548\u6027\u3002
+bridge.redis.test_while_idle=true
+# ------------------------------
+# \u4E00\u822C\u6570\u636E\u7684\u6570\u636E\u5E93\u952E\u3002
+bridge.redis.dbkey.normal_data=dbkey.normal_data
+# \u88AB\u8FC7\u6EE4\u6570\u636E\u7684\u6570\u636E\u5E93\u952E\u3002
+bridge.redis.dbkey.filtered_data=dbkey.filtered_data
+# \u88AB\u89E6\u53D1\u6570\u636E\u7684\u6570\u636E\u5E93\u952E\u3002
+bridge.redis.dbkey.triggered_data=dbkey.triggered_data
