--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -31,6 +31,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <!-- 日志处理 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+        </dependency>
         <!-- AspectJ 框架 -->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -195,12 +200,6 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
-        <!-- Groovy 支持 -->
-        <dependency>
-            <groupId>org.apache.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <type>pom</type>
-        </dependency>
         <!-- Spring-terminator组件 -->
         <dependency>
             <groupId>com.dwarfeng</groupId>
@@ -210,6 +209,17 @@
         <dependency>
             <groupId>com.dwarfeng</groupId>
             <artifactId>spring-telqos-core</artifactId>
+        </dependency>
+        <!-- Groovy 支持 -->
+        <dependency>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <type>pom</type>
+        </dependency>
+        <!-- Influxdb -->
+        <dependency>
+            <groupId>com.influxdb</groupId>
+            <artifactId>influxdb-client-java</artifactId>
         </dependency>
         <!-- 程序自身模块 -->
         <dependency>
