--- a/fdr-node/src/main/resources/fdr/bridge.properties
+++ b/fdr-node/src/main/resources/fdr/bridge.properties
@@ -146,3 +146,18 @@ bridge.redis.dbkey.normal_data=dbkey.normal_data
 bridge.redis.dbkey.filtered_data=dbkey.filtered_data
 # \u88AB\u89E6\u53D1\u6570\u636E\u7684\u6570\u636E\u5E93\u952E\u3002
 bridge.redis.dbkey.triggered_data=dbkey.triggered_data
+###################################################
+#                    influxdb                     #
+###################################################
+# influxdb \u7684 URL\u3002
+bridge.influxdb.url=http://your-host-here:8086
+# influxdb \u7684 token\u3002
+bridge.influxdb.token=your-token-here
+# influxdb \u4E00\u822C\u6570\u636E\u7684\u6876\u3002
+bridge.influxdb.bucket.normal_data=fdr.normal_data
+# influxdb \u88AB\u8FC7\u6EE4\u6570\u636E\u7684\u6876\u3002
+bridge.influxdb.bucket.filtered_data=fdr.filtered_data
+# influxdb \u88AB\u89E6\u53D1\u6570\u636E\u7684\u6876\u3002
+bridge.influxdb.bucket.triggered_data=fdr.triggered_data
+# influxdb \u7684\u7EC4\u7EC7\u3002
+bridge.influxdb.organization=com.dwarfeng
