--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <hibernate.version>5.4.24.Final</hibernate.version>
         <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
         <slf4j.version>1.7.5</slf4j.version>
+        <jul-to-slf4j.version>2.0.7</jul-to-slf4j.version>
         <log4j2.version>2.17.2</log4j2.version>
         <jboss-logging.version>3.4.3.Final</jboss-logging.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
@@ -61,6 +62,7 @@
         <dwarfeng-dct.version>1.0.0.a-SNAPSHOT</dwarfeng-dct.version>
         <jackson.version>2.14.0</jackson.version>
         <groovy.version>4.0.6</groovy.version>
+        <influxdb.version>6.7.0</influxdb.version>
         <!-- Maven插件版本声明 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -196,6 +198,11 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>${jul-to-slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -525,6 +532,12 @@
                         <groupId>org.apache.groovy</groupId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <!-- Influxdb -->
+            <dependency>
+                <groupId>com.influxdb</groupId>
+                <artifactId>influxdb-client-java</artifactId>
+                <version>${influxdb.version}</version>
             </dependency>
             <!-- 程序自身组件 -->
             <dependency>
