--- a/fdr-impl/src/test/resources/fdr/bridge.properties
+++ b/fdr-impl/src/test/resources/fdr/bridge.properties
@@ -32,12 +32,12 @@ bridge.mock.update.before_delay=0
 # \u66F4\u65B0\u6A21\u62DF: \u6570\u636E\u66F4\u65B0\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
 bridge.mock.update.after_delay=0
 #
-# \u68C0\u67E5\u6A21\u62DF: \u5355\u6761\u6570\u636E\u68C0\u67E5\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.inspect.delay=0
-# \u68C0\u67E5\u6A21\u62DF: \u6570\u636E\u68C0\u67E5\u524D\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.inspect.before_delay=0
-# \u68C0\u67E5\u6A21\u62DF: \u6570\u636E\u68C0\u67E5\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.inspect.after_delay=0
+# \u68C0\u67E5\u6A21\u62DF: \u5355\u6761\u6570\u636E\u67E5\u8BE2\u6700\u65B0\u503C\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.latest.delay=0
+# \u68C0\u67E5\u6A21\u62DF: \u6570\u636E\u67E5\u8BE2\u6700\u65B0\u503C\u524D\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.latest.before_delay=0
+# \u68C0\u67E5\u6A21\u62DF: \u6570\u636E\u67E5\u8BE2\u6700\u65B0\u503C\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.latest.after_delay=0
 #
 # \u8BB0\u5F55\u6A21\u62DF: \u5355\u6761\u6570\u636E\u5199\u5165\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
 bridge.mock.record.delay=0
@@ -46,16 +46,16 @@ bridge.mock.record.before_delay=0
 # \u8BB0\u5F55\u6A21\u62DF: \u6570\u636E\u5199\u5165\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
 bridge.mock.record.after_delay=0
 #
-# \u67E5\u8BE2\u6A21\u62DF: \u6A21\u62DF\u6570\u636E\u95F4\u9694\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.query.data_interval=1000
-# \u67E5\u8BE2\u6A21\u62DF: \u5355\u4E2A\u6570\u636E\u67E5\u8BE2\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.query.delay=0
-# \u67E5\u8BE2\u6A21\u62DF: \u6570\u636E\u6BCF\u4E2A\u504F\u79FB\u91CF\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.query.offset_delay=0
-# \u67E5\u8BE2\u6A21\u62DF: \u6570\u636E\u67E5\u8BE2\u524D\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.query.before_delay=0
-# \u67E5\u8BE2\u6A21\u62DF: \u6570\u636E\u67E5\u8BE2\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
-bridge.mock.query.after_delay=0
+# \u67E5\u770B\u6A21\u62DF: \u6A21\u62DF\u6570\u636E\u95F4\u9694\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.lookup.data_interval=1000
+# \u67E5\u770B\u6A21\u62DF: \u5355\u4E2A\u6570\u636E\u67E5\u770B\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.lookup.delay=0
+# \u67E5\u770B\u6A21\u62DF: \u6570\u636E\u6BCF\u4E2A\u504F\u79FB\u91CF\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.lookup.offset_delay=0
+# \u67E5\u770B\u6A21\u62DF: \u6570\u636E\u67E5\u770B\u524D\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.lookup.before_delay=0
+# \u67E5\u770B\u6A21\u62DF: \u6570\u636E\u67E5\u770B\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.lookup.after_delay=0
 #
 # Mock \u6865\u63A5\u5668\u7684\u6570\u636E\u914D\u7F6E\u3002
 #   point_type \u7684\u53EF\u9009\u503C\u5982\u4E0B:
