持久器增加本地查询机制
Signed-off-by: DwArFeng <915724865@qq.com>

--- a/fdr-impl/src/test/resources/fdr/bridge.properties
+++ b/fdr-impl/src/test/resources/fdr/bridge.properties
@@ -57,6 +57,14 @@ bridge.mock.lookup.before_delay=0
 # \u67E5\u770B\u6A21\u62DF: \u6570\u636E\u67E5\u770B\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
 bridge.mock.lookup.after_delay=0
 #
+# \u539F\u751F\u67E5\u8BE2\u6A21\u62DF: \u6570\u636E\u539F\u751F\u67E5\u8BE2\u65F6\uFF0C\u67E5\u8BE2\u533A\u95F4\u6BCF\u79D2\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+# \u67E5\u8BE2\u7684\u603B\u5EF6\u8FDF\u65F6\u95F4\u4E3A: (\u67E5\u8BE2\u533A\u95F4\u7684\u603B\u957F\u5EA6 / 1000 + 1) * \u6BCF\u79D2\u7684\u5EF6\u8FDF\u65F6\u95F4\u3002
+bridge.mock.native_query.delay_per_second=0
+# \u539F\u751F\u67E5\u8BE2\u6A21\u62DF: \u6570\u636E\u539F\u751F\u67E5\u8BE2\u524D\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.native_query.before_delay=0
+# \u539F\u751F\u67E5\u8BE2\u6A21\u62DF: \u6570\u636E\u539F\u751F\u67E5\u8BE2\u540E\u7684\u5EF6\u8FDF\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+bridge.mock.native_query.after_delay=0
+#
 # Mock \u6865\u63A5\u5668\u7684\u6570\u636E\u914D\u7F6E\u3002
 #   point_type \u7684\u53EF\u9009\u503C\u5982\u4E0B:
 #     int: \u6574\u6570\u3002
