--- a/fdr-node/src/main/resources/fdr/bridge.properties
+++ b/fdr-node/src/main/resources/fdr/bridge.properties
@@ -3,6 +3,7 @@
 ###################################################
 # \u6865\u63A5\u5668\u7684\u7C7B\u578B\u3002
 # \u76EE\u524D\u652F\u6301\u7684\u7C7B\u578B\u6709:
+#   drain: \u7B80\u5355\u5730\u4E22\u5F03\u6240\u6709\u6570\u636E\uFF0C\u901A\u5E38\u7528\u4F5C\u5360\u4F4D\u7B26\uFF08\u5982\u4E0D\u60F3\u4FDD\u7559\u67D0\u7C7B\u578B\u7684\u6570\u636E\uFF0C\u5219\u53EF\u4EE5\u5728\u5BF9\u5E94\u7C7B\u578B\u4E0A\u914D\u7F6E drain\uFF09\u3002\u652F\u6301\u4FDD\u6301\u5668\u548C\u6301\u4E45\u5668\u3002
 #   mock: \u4EC5\u7528\u4E8E\u6D4B\u8BD5\uFF0C\u4E0D\u4F1A\u771F\u6B63\u6301\u4E45\u6570\u636E\uFF0C\u67E5\u8BE2\u65F6\u8FD4\u56DE\u968F\u673A\u6570\u636E\u3002\u652F\u6301\u4FDD\u6301\u5668\u548C\u6301\u4E45\u5668\u3002
 #   hibernate: \u4F7F\u7528 hibernate \u6846\u67B6\u6301\u4E45\u6570\u636E\uFF0C\u53EF\u9002\u914D\u591A\u79CD\u4E0D\u540C\u7C7B\u578B\u7684\u6570\u636E\u5E93\u3002\u652F\u6301\u6301\u4E45\u5668\u3002
 #   influxdb: \u4F7F\u7528 influxdb \u6846\u67B6\u6301\u4E45\u6570\u636E\u3002\u652F\u6301\u6301\u4E45\u5668\u3002
@@ -18,6 +19,11 @@ keep.filtered_data.type=mock
 persist.filtered_data.type=mock
 keep.triggered_data.type=mock
 persist.triggered_data.type=mock
+#
+###################################################
+#                      drain                      #
+###################################################
+# Drain \u6865\u63A5\u5668\u4E0D\u9700\u8981\u8FDB\u884C\u4EFB\u4F55\u914D\u7F6E\u3002
 #
 ###################################################
 #                      mock                       #
