实现预设桥接器
com.dwarfeng.fdr.impl.handler.bridge.multi.MultiBridge

Signed-off-by: DwArFeng <915724865@qq.com>

--- a/fdr-impl/src/test/resources/fdr/bridge.properties
+++ b/fdr-impl/src/test/resources/fdr/bridge.properties
@@ -9,6 +9,7 @@
 #   influxdb: \u4F7F\u7528 influxdb \u6846\u67B6\u6301\u4E45\u6570\u636E\u3002\u652F\u6301\u6301\u4E45\u5668\u3002
 #   redis: \u4F7F\u7528 redis \u7EF4\u62A4\u5B9E\u65F6\u6570\u636E\u3002\u652F\u6301\u4FDD\u6301\u5668\u3002
 #   kafka: \u4F7F\u7528 kafka \u63A5\u6536\u6D88\u606F\u7684\u63A8\u9001\u3002\u652F\u6301\u4FDD\u6301\u5668\u548C\u6301\u4E45\u5668\u3002\u53EA\u652F\u6301\u5199\u5165\uFF0C\u4E0D\u652F\u6301\u8BFB\u53D6\u3002
+#   multi: \u591A\u91CD\u6865\u63A5\u5668\uFF0C\u5C06\u6570\u636E\u5199\u5165\u4EE3\u7406\u7684\u6240\u6709\u6865\u63A5\u5668\uFF0C\u5E76\u4ECE\u4EE3\u7406\u7684\u7B2C\u4E00\u4E2A\u6865\u63A5\u5668\u8BFB\u53D6\u6570\u636E\u3002
 #
 # \u53EF\u4EE5\u4E3A\u4E00\u822C\u6570\u636E\u3001\u88AB\u8FC7\u6EE4\u6570\u636E\u3001\u88AB\u89E6\u53D1\u6570\u636E\u5206\u522B\u6307\u5B9A\u4FDD\u6301\u5668\u7C7B\u578B\u3002
 # \u5BF9\u4E8E\u4E00\u4E2A\u5177\u4F53\u7684\u9879\u76EE\uFF0C\u5F88\u53EF\u80FD\u53EA\u9700\u8981\u4E00\u79CD\u4FDD\u6301\u5668\u3002\u6B64\u65F6\u5982\u679C\u5E0C\u671B\u7A0B\u5E8F\u52A0\u8F7D\u65F6\u53EA\u52A0\u8F7D\u8FD9\u4E00\u79CD\u4FDD\u6301\u5668\uFF0C\u53EF\u4EE5\u901A\u8FC7\u7F16\u8F91
@@ -175,3 +176,27 @@ bridge.influxdb.bucket.filtered_data=fdr.filtered_data
 bridge.influxdb.bucket.triggered_data=fdr.triggered_data
 # influxdb \u7684\u7EC4\u7EC7\u3002
 bridge.influxdb.organization=com.dwarfeng
+#
+###################################################
+#                      multi                      #
+###################################################
+# \u591A\u91CD\u6865\u63A5\u5668\u672C\u8EAB\u4E0D\u76F4\u63A5\u5B9E\u73B0\u6570\u636E\u7684\u6865\u63A5\u65B9\u6CD5\uFF0C\u800C\u662F\u901A\u8FC7\u4EE3\u7406\u7684\u65B9\u5F0F\u5B9E\u73B0\u3002\u6570\u636E\u5199\u5165\u591A\u91CD\u6865\u63A5\u5668\u65F6\uFF0C
+# \u4F1A\u8C03\u7528\u5BF9\u5E94\u7684\u4EE3\u7406\u5217\u8868\uFF0C\u4F9D\u6B21\u8C03\u7528\u5199\u5165\u65B9\u6CD5\u3002\u6570\u636E\u4ECE\u591A\u91CD\u6865\u63A5\u5668\u4E2D\u8BFB\u53D6\u65F6\uFF0C\u4F1A\u4F7F\u7528\u5217\u8868\u4E2D\u7684\u7B2C\u4E00\u4E2A\u4EE3\u7406\uFF0C\u4F5C\u4E3A\u9996\u9009\u4EE3\u7406\uFF0C\u8C03\u7528\u8BFB\u53D6\u65B9\u6CD5\u3002
+# \u591A\u91CD\u6865\u63A5\u5668\u63D0\u4F9B\u7684\u4FDD\u6301\u5668/\u6301\u4E45\u5668\u662F\u5426\u4E3A\u53EA\u5199\u4FDD\u6301\u5668/\u6301\u4E45\u5668\u53D6\u51B3\u4E8E\u9996\u9009\u4EE3\u7406\u5BF9\u5E94\u7684\u4FDD\u6301\u5668/\u6301\u4E45\u5668\u662F\u5426\u4E3A\u53EA\u5199\u4FDD\u6301\u5668/\u6301\u4E45\u5668\u3002
+# \u4EE5\u4E0B\u914D\u7F6E\u5747\u4E3A\u4EE3\u7406\u5217\u8868\u914D\u7F6E\uFF0C\u6240\u6709\u7684\u914D\u7F6E\u8BF4\u660E\u5982\u4E0B:
+#   1. \u6BCF\u4E2A\u4EE3\u7406\u7C7B\u578B\u4E4B\u95F4\u7528\u9017\u53F7\u9694\u5F00\u3002\u5982\u679C\u4EE3\u7406\u7C7B\u578B\u6587\u672C\u4E2D\u5305\u542B\u9017\u53F7\uFF0C\u5219\u4F7F\u7528\u53CD\u659C\u6760\u8F6C\u4E49\u3002
+#   2. \u7B2C\u4E00\u4E2A\u4EE3\u7406\u7C7B\u578B\u4E3A\u9996\u9009\u4EE3\u7406\u7C7B\u578B\u3002
+# ------------------------------
+# \u4E00\u822C\u6570\u636E\u4FDD\u6301\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
+bridge.multi.delegates.keep.normal_data=xxx1,xxx2,xxx3
+# \u4E00\u822C\u6570\u636E\u6301\u4E45\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
+bridge.multi.delegates.persist.normal_data=xxx1,xxx2,xxx3
+# \u88AB\u8FC7\u6EE4\u6570\u636E\u4FDD\u6301\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
+bridge.multi.delegates.keep.filtered_data=xxx1,xxx2,xxx3
+# \u88AB\u8FC7\u6EE4\u6570\u636E\u6301\u4E45\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
+bridge.multi.delegates.persist.filtered_data=xxx1,xxx2,xxx3
+# \u88AB\u89E6\u53D1\u6570\u636E\u4FDD\u6301\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
+bridge.multi.delegates.keep.triggered_data=xxx1,xxx2,xxx3
+# \u88AB\u89E6\u53D1\u6570\u636E\u6301\u4E45\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
+bridge.multi.delegates.persist.triggered_data=xxx1,xxx2,xxx3
+# ------------------------------
