--- a/fdr-node/src/main/resources/fdr/source.properties
+++ b/fdr-node/src/main/resources/fdr/source.properties
@@ -51,13 +51,13 @@ source.kafka.dcti.max_poll_records=100
 source.kafka.dcti.max_poll_interval_ms=300000
 #
 ###################################################
-#                      mock                       #
+#                  mock.realtime                  #
 ###################################################
-# Mock \u6570\u636E\u6E90\u7684\u968F\u673A\u79CD\u5B50\u3002
-source.mock.random_seed=0
-# Mock \u6570\u636E\u6E90\u6BCF\u4E2A\u6570\u636E\u70B9\u6BCF\u79D2\u7684\u6570\u636E\u91CF\u3002
-source.mock.data_size_per_point_per_sec=400
-# Mock \u6570\u636E\u6E90\u7684\u6570\u636E\u914D\u7F6E\u3002
+# Mock \u5B9E\u65F6\u6570\u636E\u6E90\u7684\u968F\u673A\u79CD\u5B50\u3002
+source.mock.realtime.random_seed=0
+# Mock \u5B9E\u65F6\u6570\u636E\u6E90\u6BCF\u4E2A\u6570\u636E\u70B9\u6BCF\u79D2\u7684\u6570\u636E\u91CF\u3002
+source.mock.realtime.data_size_per_point_per_sec=400
+# Mock \u5B9E\u65F6\u6570\u636E\u6E90\u7684\u6570\u636E\u914D\u7F6E\u3002
 #   point_type \u7684\u53EF\u9009\u503C\u5982\u4E0B:
 #     int: \u6574\u6570\u3002
 #     long: \u957F\u6574\u6570\u3002
@@ -71,7 +71,7 @@ source.mock.data_size_per_point_per_sec=400
 #     float_string: \u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
 #     double_string: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
 #     gaussian_string: \u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
-source.mock.data_config=[\
+source.mock.realtime.data_config=[\
   {"point_id":1,"point_type":"int"},\
   {"point_id":2,"point_type":"int"},\
   ]
