实现预设数据源
com.dwarfeng.fdr.impl.handler.source.mock.historical.HistoricalMockSource

Signed-off-by: DwArFeng <915724865@qq.com>

--- a/fdr-impl/src/test/resources/fdr/source.properties
+++ b/fdr-impl/src/test/resources/fdr/source.properties
@@ -75,3 +75,36 @@ source.mock.realtime.data_config=[\
   {"point_id":1,"point_type":"int"},\
   {"point_id":2,"point_type":"int"},\
   ]
+#
+###################################################
+#                 mock.historical                 #
+###################################################
+# Mock \u5386\u53F2\u6570\u636E\u6E90\u7684\u968F\u673A\u79CD\u5B50\u3002
+source.mock.historical.random_seed=0
+# Mock \u5386\u53F2\u6570\u636E\u6E90\u6BCF\u4E2A\u6570\u636E\u70B9\u6BCF\u79D2\u7684\u6570\u636E\u91CF\uFF0C\u8BBE\u7F6E\u8F83\u4F4E\u7684\u503C\u53EF\u4EE5\u964D\u4F4E\u6570\u636E\u5904\u7406\u4E0E\u8BB0\u5F55\u7684\u538B\u529B\uFF08\u4F1A\u589E\u52A0\u751F\u6210\u5B8C\u6574\u6570\u636E\u6240\u9700\u7684\u65F6\u95F4\uFF09\uFF0C
+# \u4E0D\u5F71\u54CD\u6570\u636E\u7684\u5B8C\u6574\u6027\u3002
+source.mock.historical.data_size_per_point_per_sec=400
+# Mock \u5386\u53F2\u6570\u636E\u6E90\u7684\u8D77\u59CB\u65E5\u671F\uFF0C\u683C\u5F0F\u4E3A yyyy-MM-dd HH:mm:ss.SSS\u3002
+source.mock.historical.start_date=1992-12-18 00:00:00.000
+# Mock \u5386\u53F2\u6570\u636E\u6E90\u7684\u7ED3\u675F\u65E5\u671F\uFF0C\u683C\u5F0F\u4E3A yyyy-MM-dd HH:mm:ss.SSS\u3002
+source.mock.historical.end_date=1992-12-19 00:00:00.000
+# Mock \u5386\u53F2\u6570\u636E\u6E90\u7684\u6570\u636E\u70B9\u53D1\u751F\u65F6\u95F4\u7684\u589E\u91CF\uFF0C\u5355\u4F4D\u4E3A\u6BEB\u79D2\u3002
+source.mock.historical.happened_date_increment=1000
+# Mock \u5386\u53F2\u6570\u636E\u6E90\u7684\u6570\u636E\u914D\u7F6E\u3002
+#   point_type \u7684\u53EF\u9009\u503C\u5982\u4E0B:
+#     int: \u6574\u6570\u3002
+#     long: \u957F\u6574\u6570\u3002
+#     float: \u6D6E\u70B9\u6570\u3002
+#     double: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u3002
+#     gaussian: \u9AD8\u65AF\u5206\u5E03\u3002
+#     boolean: \u5E03\u5C14\u503C\u3002
+#     string: \u5B57\u7B26\u4E32\u3002
+#     int_string: \u6574\u6570\u5B57\u7B26\u4E32\u3002
+#     long_string: \u957F\u6574\u6570\u5B57\u7B26\u4E32\u3002
+#     float_string: \u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
+#     double_string: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
+#     gaussian_string: \u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
+source.mock.historical.data_config=[\
+  {"point_id":1,"point_type":"int"},\
+  {"point_id":2,"point_type":"int"},\
+  ]
