--- a/fdr-node/src/main/resources/fdr/bridge.properties
+++ b/fdr-node/src/main/resources/fdr/bridge.properties
@@ -78,14 +78,14 @@ bridge.mock.native_query.after_delay=0
 #     long: \u957F\u6574\u6570\u3002
 #     float: \u6D6E\u70B9\u6570\u3002
 #     double: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u3002
-#     gaussian: \u9AD8\u65AF\u5206\u5E03\u3002
+#     gaussian: \u6807\u51C6\u9AD8\u65AF\u5206\u5E03\u3002
 #     boolean: \u5E03\u5C14\u503C\u3002
 #     string: \u5B57\u7B26\u4E32\u3002
 #     int_string: \u6574\u6570\u5B57\u7B26\u4E32\u3002
 #     long_string: \u957F\u6574\u6570\u5B57\u7B26\u4E32\u3002
 #     float_string: \u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
 #     double_string: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
-#     gaussian_string: \u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
+#     gaussian_string: \u6807\u51C6\u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
 bridge.mock.data_config=[\
   {"point_id":1,"point_type":"int"},\
   {"point_id":2,"point_type":"int"},\
