--- a/fdr-node/src/main/resources/fdr/source.properties
+++ b/fdr-node/src/main/resources/fdr/source.properties
@@ -63,14 +63,14 @@ source.mock.realtime.data_size_per_point_per_sec=400
 #     long: \u957F\u6574\u6570\u3002
 #     float: \u6D6E\u70B9\u6570\u3002
 #     double: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u3002
-#     gaussian: \u9AD8\u65AF\u5206\u5E03\u3002
+#     gaussian: \u6807\u51C6\u9AD8\u65AF\u5206\u5E03\u3002
 #     boolean: \u5E03\u5C14\u503C\u3002
 #     string: \u5B57\u7B26\u4E32\u3002
 #     int_string: \u6574\u6570\u5B57\u7B26\u4E32\u3002
 #     long_string: \u957F\u6574\u6570\u5B57\u7B26\u4E32\u3002
 #     float_string: \u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
 #     double_string: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
-#     gaussian_string: \u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
+#     gaussian_string: \u6807\u51C6\u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
 source.mock.realtime.data_config=[\
   {"point_id":1,"point_type":"int"},\
   {"point_id":2,"point_type":"int"},\
@@ -96,14 +96,14 @@ source.mock.historical.happened_date_increment=1000
 #     long: \u957F\u6574\u6570\u3002
 #     float: \u6D6E\u70B9\u6570\u3002
 #     double: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u3002
-#     gaussian: \u9AD8\u65AF\u5206\u5E03\u3002
+#     gaussian: \u6807\u51C6\u9AD8\u65AF\u5206\u5E03\u3002
 #     boolean: \u5E03\u5C14\u503C\u3002
 #     string: \u5B57\u7B26\u4E32\u3002
 #     int_string: \u6574\u6570\u5B57\u7B26\u4E32\u3002
 #     long_string: \u957F\u6574\u6570\u5B57\u7B26\u4E32\u3002
 #     float_string: \u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
 #     double_string: \u53CC\u7CBE\u5EA6\u6D6E\u70B9\u6570\u5B57\u7B26\u4E32\u3002
-#     gaussian_string: \u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
+#     gaussian_string: \u6807\u51C6\u9AD8\u65AF\u5206\u5E03\u5B57\u7B26\u4E32\u3002
 source.mock.historical.data_config=[\
   {"point_id":1,"point_type":"int"},\
   {"point_id":2,"point_type":"int"},\
