优化数据处理逻辑并增加部分桥接器的数据处理策略
优化数据处理逻辑
  修改 KeepConsumer 消费数据的逻辑
  更新 Source.Context.record 方法的文档注释
  更新 KeepHandler 中更新数据方法的文档注释

增加 RedisBridge 的数据处理策略
  增加一般数据中更早的数据能否覆盖更晚的数据的配置项
  增加被过滤数据中更早的数据能否覆盖更晚的数据的配置项
  增加被触发数据中更早的数据能否覆盖更晚的数据的配置项

Signed-off-by: DwArFeng <915724865@qq.com>

--- a/fdr-impl/src/test/resources/fdr/bridge.properties
+++ b/fdr-impl/src/test/resources/fdr/bridge.properties
@@ -163,6 +163,13 @@ bridge.redis.dbkey.normal_data=dbkey.normal_data
 bridge.redis.dbkey.filtered_data=dbkey.filtered_data
 # \u88AB\u89E6\u53D1\u6570\u636E\u7684\u6570\u636E\u5E93\u952E\u3002
 bridge.redis.dbkey.triggered_data=dbkey.triggered_data
+# ------------------------------
+# \u4E00\u822C\u6570\u636E\u4E2D\u66F4\u65E9\u7684\u6570\u636E\u80FD\u5426\u8986\u76D6\u66F4\u665A\u7684\u6570\u636E\u3002
+bridge.redis.earlier_override.normal_data=false
+# \u88AB\u8FC7\u6EE4\u6570\u636E\u4E2D\u66F4\u65E9\u7684\u6570\u636E\u80FD\u5426\u8986\u76D6\u66F4\u665A\u7684\u6570\u636E\u3002
+bridge.redis.earlier_override.filtered_data=false
+# \u88AB\u89E6\u53D1\u6570\u636E\u4E2D\u66F4\u65E9\u7684\u6570\u636E\u80FD\u5426\u8986\u76D6\u66F4\u665A\u7684\u6570\u636E\u3002
+bridge.redis.earlier_override.triggered_data=false
 #
 ###################################################
 #                    influxdb                     #
@@ -202,4 +209,3 @@ bridge.multi.delegates.persist.filtered_data=xxx1,xxx2,xxx3
 bridge.multi.delegates.keep.triggered_data=xxx1,xxx2,xxx3
 # \u88AB\u89E6\u53D1\u6570\u636E\u6301\u4E45\u5668\u7684\u4EE3\u7406\u5217\u8868\u3002
 bridge.multi.delegates.persist.triggered_data=xxx1,xxx2,xxx3
-# ------------------------------
