增加 temp 目录，用于存放临时文件
Signed-off-by: DwArFeng <915724865@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,9 @@ buildNumber.properties
 ## Confext Files
 #################
 /fdr-node/confext/
+
+#################
+## Temp Files
+#################
+/fdr-impl/temp/
+/fdr-node/temp/
